--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Situs web REST API yang menyediakan berbagai macam Api untuk mengembangkan aplikasimu.">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
     <meta name="author" content="Gbt`Yanz">
-    <title> VAJIRA - IZUMI SITE</title>
+    <title> ZENITSU - IZUMI SITE</title>
     <meta property="og:site_name" name="og:site_name" content="ABU - REST API">
     <meta property="og:title" name="og:title" content="ABU - REST API">
     <meta property="og:url" name="og:url" content="gabutyanz.xyz">
