--- a/QUEEN-IZUMI-WEB-main/index.html
+++ b/QUEEN-IZUMI-WEB-main/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Personal Website Vajira Rathnayaka" />
-    <meta name="keywords" content="Vajira Rathnayaka, Website QUEEN-IZUMI-MD" />
+    <meta name="description" content="Personal Website Ayan mdoz" />
+    <meta name="keywords" content="Ayan mdoz, Website ZENITSU-MD-V3" />
     <meta name="author" content="Vajira Rathnayaka" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IZUMI-WEB</title>
+    <title>ZENITSU-MD-V3-WEB</title>
 
     <!-- My CSS -->
     <link rel="stylesheet" href="css/style.css" />
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header>
-      <button onclick="alert('Hello! Welcome to izumi bot web site. (Created by vajira Rathnayaka). Developed by Vajira and Timasha')">
+      <button onclick="alert('Hello! Welcome to izumi bot web site. (Created by Ayan mdoz). Developed by ayan mdoz and Ghost modz')">
         <div class="share-button">
           <i class="fa-solid fa-hand"></i>
           <!-- <p>Share</p> -->
@@ -43,12 +43,12 @@
       <div class="image-container">
         <img
           src="img/foto_gue.jpg"
-          alt="Vajira Rathnayaka"
+          alt="ayan mdoz"
           height="110"
           width="110"
         />
       </div>
-      <h1 class="name">@VajiraRathnayaka</h1>
+      <h1 class="name">@ayanmdoz</h1>
       <br />
       <!-- Search Google -->
 
@@ -84,12 +84,12 @@
      
       <!-- Github repo -->
       <a
-        href="https://github.com/VajiraTech"
+        href="https://github.com/ayanmdoz"
         class="tile"
         data-aos="zoom-in"
         data-aos-duration="1000"
       >
-        <div class="icon" link="https://github.com/VajiraTech">
+        <div class="icon" link="https://github.com/ayanmdoz">
           <i class="fa-brands fa-github"></i>
         </div>
         <p>Github repo</p>
@@ -101,12 +101,12 @@
 
       <!-- My Bot -->
       <a
-        href="https://github.com/VajiraTech/QUEEN-IZUMI-MD"
+        href="https://github.com/ayanmdoz/ZENITSU-MD-V3"
         class="tile"
         data-aos="zoom-in"
         data-aos-duration="1500"
       >
-        <div class="icon" link="https://github.com/VajiraTech/QUEEN-IZUMI-MD">
+        <div class="icon" link="https://github.com/ayanmdoz/ZENITSU-MD-V3">
           <i class="fa-brands fa-github"></i>
         </div>
         <p>Queen Izumi bot</p>
