--- a/QUEEN-IZUMI-WEB-main/contact.html
+++ b/QUEEN-IZUMI-WEB-main/contact.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>QUEEN-IZUMI-MD</title>
+  <title>ZENITSU-MD-V3</title>
   <link rel="icon" type="image/x-icon" href="https://i.ibb.co/L6CkDTK/105.png">
   <link rel="shortcut icon" href="https://i.ibb.co/ZMGBfmv/11.png" sizes="192x192" type="image/png">
 <style>
@@ -92,14 +92,14 @@ body
 </style>
 </head>
 <body><div>
-  <a href="https://api.whatsapp.com/send/?phone=94766943622&text=Hey&Vajira" class="btn">VAJIRA C1<span><ion-icon name="person"></ion-icon></span></a>
+  <a href="https://api.whatsapp.com/send/?phone=94766943622&text=Hey&Ayan" class="btn">AYAN C1<span><ion-icon name="person"></ion-icon></span></a>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 <br>
 <br>
   <body>
-  <a href="https://api.whatsapp.com/send/?phone=94715264791&text=Hey&Timasha" class="btn">TIMASHA C2<span><ion-icon name="person"></ion-icon></span></a>
+  <a href="https://api.whatsapp.com/send/?phone=258876858013&text=Hey&Ghost" class="btn">Ayan C2<span><ion-icon name="person"></ion-icon></span></a>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
