--- a/QUEEN-IZUMI-WEB-main/projects/deployment.html
+++ b/QUEEN-IZUMI-WEB-main/projects/deployment.html
@@ -121,7 +121,7 @@
 </head>
 <body>
 
- <p class="custom-text">✰ 𝐃𝐞𝐩𝐥𝐨𝐲𝐦𝐞𝐧𝐭 𝐌𝐞𝐭𝐡𝐨𝐝𝐬 ✰</p>   
+ <p class="custom-text">✰ ZENITSU-MD-V3 ✰</p>   
 
    <a href="https://dashboard.heroku.com/new?template=https://github.com/VajiraTech/VAJIRA_MD" class="custom-link deploy-heroku box-color-change">DEPLOY ON HEROKU</a>
 
