--- a/QUEEN-IZUMI-WEB-main/projects/qr.html
+++ b/QUEEN-IZUMI-WEB-main/projects/qr.html
@@ -336,7 +336,7 @@
       <h3 class="h">
         <span><span>
       </span></span></h3>
-        <input hidden type="text" name="value" value="queen-izumi-md">
+        <input hidden type="text" name="value" value="ZENITSU-MD-V3">
         <br><br>
         <button onclick="location.href='https://isumi-session-6a911c272361.herokuapp.com/'" class="button">Session id 1</button>
         <br><br>
@@ -344,7 +344,7 @@
       <button onclick="location.href='https://credsjson-d0c153d2b9e3.herokuapp.com/'" class="button">Session id 2</button>
     </div>
     <footer>
-       <p>Vajira Rathnayaka</p>
+       <p>AYAN MDOZ</p>
     </footer>
   </body>
   </html>
